# MKVDB

./: .gitignore  README.md
.github/workflows/: rust.yml
docs/: ARCHITECTURE.md
docs/technical-paper/: MKVDB_Architecture.md
storage-engine/: Cargo.toml  test_iter.rs  test_lower_bound.rs  test_send.rs
storage-engine/benches/: engine_bench.rs
storage-engine/examples/: chaos_test.rs
storage-engine/proto/: raft.proto
storage-engine/src/: batch.rs  compaction.rs  engine.rs  error.rs  iterator.rs  lib.rs  main.rs  manifest.rs  memtable.rs  metrics.rs  test_iter.rs  wal.rs
storage-engine/src/network/: grpc.rs  mod.rs  node.rs  resp.rs  server.rs  storage.rs
storage-engine/src/sstable/: builder.rs  cache.rs  iterator.rs  mod.rs  reader.rs
storage-engine/tests/: admission_control_test.rs  chaos_kill.py  checkpoint_test.rs  compaction_test.rs  corruption_test.py  distributed_verifier_harness.rs  forensic_audit.rs  integration_test.rs  mvcc_test.py  network_test.py  phase1_raft_routing_test.rs
storage-engine/tests/validation/: mod.rs
storage-engine/tests/validation/adversarial/: mod.rs
storage-engine/tests/validation/adversarial/core/: event_log.rs  fault_controller.rs  harness.rs  mod.rs
storage-engine/tests/validation/adversarial/net/: interceptor.rs
storage-engine/tests/validation/adversarial/scenarios/: crash_durability.rs  mod.rs  read_correctness.rs  reordering.rs  split_brain.rs  stability_soak.rs
storage-engine/tests/validation/common/: harness.rs  mod.rs  proxy.rs
storage-engine/tests/validation/raft/: safety.rs
storage-engine/tests/validation/storage/: durability.rs  mod.rs
