[package]
name = "storage-engine"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1.36", features = ["full"] }
crossbeam-skiplist = "0.1.3"
bytes = "1.5.0"
crc32fast = "1.4.0"
bloomfilter = "1.0.14"
thiserror = "1.0.57"
parking_lot = "0.12.1"
moka = { version = "0.12.5", features = ["sync"] }
arc-swap = "1.9.1"
futures-util = "0.3.32"

[dev-dependencies]
proptest = "1.4.0"
tempfile = "3.10"
criterion = { version = "0.5", features = ["async_tokio", "html_reports"] }
tokio = { version = "1.36", features = ["full", "test-util"] }

# Criterion benchmark harness
[[bench]]
name = "engine_bench"
harness = false

# Keep debug symbols in release builds for cargo-flamegraph
[profile.release]
debug = true
